--- a/gameos/redirect.html
+++ b/gameos/redirect.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head>
     <title>Download Latest Release</title>
-    <a href="https://github.com/serainox420/os-the-game/missions/your_package_name.zip"</a>
+    <a href="https://raw.githubusercontent.com/serainox420/serainox420.github.io/personal/gameos/redirect.html"</a>
 
 </html>
