--- a/gameos/redirect.html
+++ b/gameos/redirect.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Download Latest Release</title>
-    <a href="https://raw.githubusercontent.com/serainox420/serainox420.github.io/personal/gameos/redirect.html"</a>
-
+    <meta http-equiv="refresh" content="0; url=https://raw.githubusercontent.com/serainox420/serainox420.github.io/personal/gameos/redirect.html">
+</head>
+<body>
+</body>
 </html>
