--- a/gameos/redirect.html
+++ b/gameos/redirect.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Download Latest Release</title>
-    <meta http-equiv="refresh" content="0; url=https://raw.githubusercontent.com/serainox420/serainox420.github.io/personal/gameos/redirect.html">
+    <meta http-equiv="refresh" content="0; url=https://github.com/serainox420/Minehattan-Project/blob/main/CastleBravo%20Class%20Items.zip">
 </head>
 <body>
 </body>
