--- a/gameos/redirect.html
+++ b/gameos/redirect.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Download Latest Release</title>
-    <meta http-equiv="refresh" content="0; url=https://github.com/serainox420/Minehattan-Project/raw/main/CastleBravo%20Class%20Items.zip
-">
+    <meta http-equiv="refresh" content="0; url=https://github.com/serainox420/Minehattan-Project/releases/download/YOUR_RELEASE_TAG/CastleBravo%20Class%20Items.zip">
 </head>
 <body>
 </body>
